src/main/metadata-au/objects/Lead__c.object
<CustomObject>
    <fields>
        <fullName>Lead_InfoSourceSub__c</fullName>
        <label>Lead InfoSourceSub</label>
        <picklist>
            <controllingField>Lead_InfoSource__c</controllingField>
            <picklistValues>
                <fullName>Air China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party (Partner) Mail_Minsheng Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party (Partner) Mail _Bank of Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB official website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sina Blog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart official website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese radio network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Web, Community, Blog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Telecom/189 email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz E-newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz E-brochure and price list</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz Telephone Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer telephone contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Telephone Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products range cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure &amp; Price List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer message contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Message Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz Message Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Show Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend Recommendation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_InfoSource__c</fullName>
        <label>Lead InfoSource</label>
        <picklist>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web/Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper/Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Exhibition Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Web Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Sub_Type__c</fullName>
        <label>Lead Sub-Type</label>
        <picklist>
            <controllingField>Lead_Type__c</controllingField>
            <picklistValues>
                <fullName>car care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>wear and tear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>spare part</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>service contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>technical accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>collection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TA&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Need Follow Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Life_Cycle__c</fullName>
        <label>Life Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Need to be transferred to CS system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending for RO allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending for dealer allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer processing (LMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending for re-allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed – successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer contact dealer already</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed -  convert to other series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to other brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost with no interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending for RO allocation(smart)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending for dealer allocation(smart)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer processing(smart)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed – lost sale(after sales following, in-active)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (before sales, in-active)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to be transfer to RME /smart pre-sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lodgment_Date__c</fullName>
        <label>Lodgment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost_CAC_Date_Time__c</fullName>
        <label>Lost(CAC) Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lost_CAC_Date__c</fullName>
        <label>Lost(CAC) Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost_Dealer_Date_Time__c</fullName>
        <label>Lost(Dealer) Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lost_Dealer_Date__c</fullName>
        <label>Lost(Dealer) Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost_To__c</fullName>
        <label>Lost To</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MB_Vehicle_Interest__c</fullName>
        <label>MB Vehicle Interest</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS Shooting Brake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLC-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vito Panel Van</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MB_Vehicle_Outcome__c</fullName>
        <label>MB Vehicle Outcome</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS Shooting Brake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLC-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vito Panel Van</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>IF( 
ISBLANK(Contact__c), 
Company_Account__r.PersonMobilePhone, 
Collectioner_Name__r.MobilePhone
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <formula>Existing_Contract__r.Monthly_Repayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nature_of_Request__c</fullName>
        <label>Nature of Request</label>
        <picklist>
            <picklistValues>
                <fullName>Brochure Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Payout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key 2 Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agility</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Need_Assign_To_Dealer__c</fullName>
        <description>/* 
Created by: Mouse Liu
Used by: Lead__c (US-Lead-13)
Function:  Judege whether lead is qualified
Used in: Page Layouts, Reports, Workflow

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <formula>IF (
	OR (
		Assigned_to_Dealer_Directly__c = true,
		
		AND (
        		TEXT(Contact__r.Allow_Data_Sharing__c) == "Yes",

        		TEXT(CAC_Lead_Status__c) &lt;&gt; "Purchased(Only Non BDC)",

        		TEXT(CAC_Lead_Status__c) &lt;&gt; "Lost(CAC)",

        		TEXT(Contact__r.Gender__c) &lt;&gt; NULL,

        		Text(Contact__r.Province__c) &lt;&gt; NULL,

        		Contact__r.City__c &lt;&gt; NULL,

        		TEXT(Contact__r.Preferred_Language__c) &lt;&gt; NULL,

        		TEXT(Relation_With_The_Leads__c) &lt;&gt; NULL,

        		OR (
            			TEXT(Lead_Type__c) == "New Car",

           			AND ( 
                			TEXT(Lead_Type__c) == "Used Car",
                			INCLUDES(Lead_Desired_Service__c, "Trade-In")  
            			)
        		),

        		TEXT(Purchase_Time__c)  &lt;&gt; NULL,

        		TEXT(Interested_Vehicle_Brand__c) &lt;&gt; NULL,

        		OR (
            			INCLUDES(Lead_Desired_Service__c , "Test Drive"),
           			TEXT(Purchase_Time__c)  == "0 - 3 months",
            			TEXT(Purchase_Time__c)  == "4 - 6 months"
        		)
		)
    	),

    "Need",
    "Not Need"
)</formula>
        <label>Need Assign To Dealer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Associate_Campaign__c</fullName>
        <formula>IMAGE('/resource/1426571072000/ReminderForCampaignRelation','Need Associate Campaign')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Need Associate Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Registration_Date__c</fullName>
        <label>Network Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Insurance_Policy_Number__c</fullName>
        <label>New Insurance Policy Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextMileage__c</fullName>
        <label>NextMileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Assigned_Dealer__c</fullName>
        <formula>IF( Assigned_Dealer__c  &lt;&gt; Null, "", IMAGE('resource/1422335657000/Dealer_Reminder','Dealer Not Assigned'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Assigned Dealer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OB_Call_Amount__c</fullName>
        <formula>IF(ISPICKVAL(Lead_DataSource__c,'OB Call'),1,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OB Call Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Odometer_Reading__c</fullName>
        <formula>VehicleRel_No__r.Odometer_Reading__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Odometer Reading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Placed_Date_Time__c</fullName>
        <label>Order Placed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Placed_Date__c</fullName>
        <label>Order Placed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Orig_Fee__c</fullName>
        <label>Orig Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parts_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parts Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structured</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pick_up_Time__c</fullName>
        <label>Pick-up Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Policy_Inception_Date__c</fullName>
        <label>Policy Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <formula>IF(ISBLANK(Contact__c),Company_Account__r.ZipCode__c,Contact__r.ZipCode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone and Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Time__c</fullName>
        <label>Preferred Contact Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Preferred_Test_Drive_Time__c</fullName>
        <label>Preferred Test Drive Time</label>
        <picklist>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Range_From__c</fullName>
        <label>Price Range From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Range_To__c</fullName>
        <label>Price Range To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Range__c</fullName>
        <label>Price Range</label>
        <picklist>
            <picklistValues>
                <fullName>RMB100,001~150,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB150,001~200,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB200,000~300,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB300,001~400,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB400,001~500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB500,001~700,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB700,001~1 million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB1,000,001~1,500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB1,500,001~2 million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2～3 million RMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>more than 3 million RMB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proxy_Date_Time__c</fullName>
        <description>/* 
Created by: Mouse Liu 
Used by: Lead__c (US-Lead-46) 
Function: If any one Dealer Untouched(In 72H) realted Date Time is not null and Proxy Date Time is not null,
assigned the updated Date Time to Proxy Date Time
Used in: Formula Field (Dealer Untouched(In 72H))

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>*Proxy Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Purchase_Amount__c</fullName>
        <label>Purchase Amount</label>
        <picklist>
            <picklistValues>
                <fullName>One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three or Four</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Five or Six</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than Six</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <formula>VehicleRel_No__r.Purchase_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Time__c</fullName>
        <label>Purchase Time</label>
        <picklist>
            <picklistValues>
                <fullName>Empty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchased_CAC_Date_Time__c</fullName>
        <label>Purchased(CAC) Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Purchased_CAC_Date__c</fullName>
        <label>Purchased(CAC) Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchased_Date_Time__c</fullName>
        <label>Purchased Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Purchased_Date__c</fullName>
        <label>Purchased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualified_Date_Time__c</fullName>
        <label>Qualified Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RORAC__c</fullName>
        <label>RORAC</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>R_Accepted_Leads__c</fullName>
        <formula>IF (OR(
 ISPICKVAL(Dealer_Lead_Status__c,"Accepted"),
 ISPICKVAL(Dealer_Lead_Status__c,"Contact Failed For 3 Days(Only Non BDC)"),
 ISPICKVAL(Dealer_Lead_Status__c,"First Contact Customer"),
 ISPICKVAL(Dealer_Lead_Status__c,"Test Drive"),
 ISPICKVAL(Dealer_Lead_Status__c,"Visited Showroom(Only Non BDC)"),
 ISPICKVAL(Dealer_Lead_Status__c,"Order Placed"),
 ISPICKVAL(Dealer_Lead_Status__c,"Purchased(Only Non BDC)"),
 ISPICKVAL(Dealer_Lead_Status__c,"Lost(Dealer)")),
1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Active_Leads__c</fullName>
        <formula>IF(Is_Active__c=='Active',1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_CAC_Followup__c</fullName>
        <formula>IF(AND(ISBLANK(Assigned_Dealer__c), ISPICKVAL(CAC_Lead_Status__c, 'Qualified') ),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAC Followup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>